tutorials/0.9.3/faq.md
---
permalink: /tutorials/0.9.3/faq
layout: splash
classes: wide
title: "FAQ"
---

<center><h1 style="margin-top:40px">FAQ: Frequently Asked Questions</h1></center><br>

#### Table of Contents

- [General](#1-general)
- [Setup](#2-setup)
- [Simulation](#3-simulation)


## 1. General

### 1.1. What is *ab initio*?
Blind docking or *ab initio* is the protocol to execute when no additional information is provided for performing the docking (residue restraints, etc.).

By default LightDock setup considers:

* **Number of Swarms**: automatically calculated depending on the receptor surface area and shape (it might be fixed by using the `-s` flag in `lightdock3_setup.py`)
* **Number of Glowworms**: 200 (it might be selected by the user by using the `-g` flag in `lightdock3_setup.py`)

About the number of steps, in the [original publication](https://academic.oup.com/bioinformatics/article/34/1/49/4103399) the number of steps was equal to 200, but quality of the results is not affected if using 100 steps. The reason behind performing 200 steps was for benchmarking the method.

We recommend using **100 steps of simulation**.


## 2. Setup

### 2.1. Removing previous files when setup fails
If LightDock setup fails and no `setup.json` file is generated, **all files generated by LightDock should be deleted**. This is critical as LightDock may append PDB structures parsed to `lightdock_*.pdb` existing PDB files, with the result of multiple structures per PDB file. Remove all the generated files by LightDock and leave only the original input to perform a new setup.

To clean a failed simulation working directory:

```bash
$ rm -rf lightdock_* init/ swarm_* setup.json *.npy top/ rank_by* solutions.list
```

## 3. Simulation

### 3.1. DFIRE fails with KeyError

In old versions of LightDock and when using DFIRE scoring function, LightDock might fail with a similar error to this example:

```
File "/home/software/lightdock/lightdock/scoring/dfire/driver.py", line 152, in _get_docking_model
anuma = atomnumber[rec_atom_type]
KeyError: 'LYSH1'
```

This is caused by DFIRE scoring functions not recognizing `H` (hydrogen) atoms. Remove all hydrogen atoms and any other non-standard residue or `HETATM`.

For removing hydrogens, you can use the flag `--noh` in `lightdock_setup` command or the [Reduce](https://github.com/rlabduke/reduce) software:

```
reduce -Trim input.pdb > output.pdb
```

**DFIRE scoring function (`dfire`, `fastdfire`) only recognizes the 20 standard aminoacids** (other scoring functions might fail for similar reasons).

